<resources>
    <string name="app_name">My Day</string>
    <string name="app_version">Ver 1.0</string>
    <string name="app_company">FPT Polytechnic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Calendar</string>
    <string name="slide_1_desc">The easiest way to manage your day !</string>
    <string name="slide_2_title">Weather</string>
    <string name="slide_2_desc">Let see how your day will be !</string>
    <string name="slide_3_title">Note</string>
    <string name="slide_3_desc">Keep something important, you found it !</string>
    <string name="slide_4_title"></string>
    <string name="slide_4_desc">Start up !</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_weather">Weather</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>
    <string name="wind">Wind</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="uvindex">UV Index</string>
    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>
    <string name="search_title">Search for city</string>
    <string name="downloading_data">Downloading your data ...</string>
    <string name="getting_location">Getting your location ...</string>
    <string name="loading_data">Loading...</string>
    <string name="error_dateFormat">DATE FORMAT ERROR</string>
    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_transparent_widget">Make widget transparent</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="settings_15min">15 min</string>
    <string name="settings_30min">30 min</string>
    <string name="settings_1hour">1 h</string>
    <string name="settings_2hour">2 h</string>
    <string name="settings_6hour">6 h</string>
    <string name="settings_12hour">12 h</string>
    <string name="settings_24hour">24 h</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>
    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>
    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>
    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>
    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="speed_unit_kn">kn</string>
    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>
    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>
    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>
    <string name="setting_theme_black">Fresh Black</string>
    <string name="setting_theme_classic_black">Classic Black</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_cloudy_gusts" translatable="false">&#xf011;</string>
    <string name="weather_day_cloudy" translatable="false">&#xf002;</string>
    <string name="weather_day_haze" translatable="false">&#xf0b6;</string>
    <string name="weather_day_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_dust" translatable="false">&#xf063;</string>
    <string name="weather_fog" translatable="false">&#xf014;</string>
    <string name="weather_hail" translatable="false">&#xf015;</string>
    <string name="weather_hot" translatable="false">&#xf072;</string>
    <string name="weather_hurricane" translatable="false">&#xf073;</string>
    <string name="weather_lightning" translatable="false">&#xf016;</string>
    <string name="weather_night_alt_cloudy" translatable="false">&#xf086;</string>
    <string name="weather_night_clear" translatable="false">&#xf02e;</string>
    <string name="weather_rain" translatable="false">&#xf019;</string>
    <string name="weather_rain_mix" translatable="false">&#xf017;</string>
    <string name="weather_sandstorm" translatable="false">&#xf082;</string>
    <string name="weather_showers" translatable="false">&#xf01a;</string>
    <string name="weather_sleet" translatable="false">&#xf0b5;</string>
    <string name="weather_smoke" translatable="false">&#xf062;</string>
    <string name="weather_snow" translatable="false">&#xf01b;</string>
    <string name="weather_snowflake_cold" translatable="false">&#xf076;</string>
    <string name="weather_sprinkle" translatable="false">&#xf01c;</string>
    <string name="weather_storm_showers" translatable="false">&#xf01d;</string>
    <string name="weather_strong_wind" translatable="false">&#xf050;</string>
    <string name="weather_thunderstorm" translatable="false">&#xf01e;</string>
    <string name="weather_tornado" translatable="false">&#xf056;</string>
    <string name="weather_windy" translatable="false">&#xf021;</string>
    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>
    <string name="beaufort_calm">Calm</string>
    <string name="beaufort_light_air">Light air</string>
    <string name="beaufort_light_breeze">Light breeze</string>
    <string name="beaufort_gentle_breeze">Gentle breeze</string>
    <string name="beaufort_moderate_breeze">Moderate breeze</string>
    <string name="beaufort_fresh_breeze">Fresh breeze</string>
    <string name="beaufort_strong_breeze">Strong breeze</string>
    <string name="beaufort_high_wind">High wind</string>
    <string name="beaufort_gale">Gale</string>
    <string name="beaufort_strong_gale">Strong gale</string>
    <string name="beaufort_storm">Storm</string>
    <string name="beaufort_violent_storm">Violent storm</string>
    <string name="beaufort_hurricane">Hurricane</string>
    <string name="uvi_no_info">No Info</string>
    <string name="uvi_low">Low</string>
    <string name="uvi_moderate">Moderate</string>
    <string name="uvi_high">High</string>
    <string name="uvi_very_high">Very High</string>
    <string name="uvi_extreme">Extreme</string>
    <string name="dash_clock_status">%1$s%2$s</string>
    <string name="dash_clock_expanded_title">%1$s%2$s - %3$s</string>
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_display">Display</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="settings_title_location">Location</string>
    <string name="setting_update_location_automatically">Update location in background</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="menu_note">Note</string>
    <string name="create_new_note">Create new note...</string>
    <string name="checkbox_notes_button">Checkbox notes button</string>
    <string name="draw_notes_button">Draw notes button</string>
    <string name="micro_notes_button">Micro notes button</string>
    <string name="photo_notes_button">Photo notes button</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>
    <string name="image_description" />
    <string name="action_feedback">Feedback us !</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="action_login">Sign In</string>
    <string name="action_register">Sign Up</string>
    <string name="tag_name">Tag\'s name</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="tag_description">Tag\'s description</string>
    <string name="tag_update_title">Update tag</string>
    <string name="dialog_btn_update">Update</string>
</resources>