<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/calendar_icon"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather_icon"
            android:title="@string/menu_weather" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/note_icon"
            android:title="@string/menu_note" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share_icon"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/signout_icon"
                android:title="@string/menu_sign_out" />

        </menu>
    </item>
</menu>

