<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="64dp"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"
        android:contentDescription="@string/image_description"
        android:id="@+id/imgLogo"/>

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/app_name"/>

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/app_version"/>

    <TextView
        android:layout_margin="8dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/app_company"/>

    <TextView
        android:id="@+id/tvFeedBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:drawableStart="@drawable/feedback_icon"
        android:drawableLeft="@drawable/feedback_icon"
        android:padding="8dp"
        android:text="@string/action_feedback"
        android:textSize="20sp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:drawablePadding="8dp"
        android:textStyle="bold|italic" />

</LinearLayout>