<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/title_color"
        android:text="@string/tag_update_title" />

    <EditText
        android:id="@+id/edtTagName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:inputType="text"
        android:hint="@string/tag_name" />

    <EditText
        android:id="@+id/edtTagDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:padding="8dp"
        android:inputType="text"
        android:hint="@string/tag_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_update"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_btn_cancel"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>