<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/note_list"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:layout_marginTop="0dp"
            android:fillViewport="true"
            android:paddingStart="5dp"
            android:paddingTop="60dp"
            android:paddingEnd="5dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/note_recycle_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:scrollbars="vertical" />

        </ScrollView>

        <TableLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/colorBottomToolbar"
            android:stretchColumns="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TableRow
                android:id="@+id/firstRow"
                tools:ignore="UselessParent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/create_new_note"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/create_new_note"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textColor="@color/colorHint"
                    tools:ignore="RtlCompat" />

                <ImageButton
                    android:id="@+id/create_new_checkbox_note"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/checkbox_notes_button"
                    android:src="@drawable/ic_icon_list" />

                <ImageButton
                    android:id="@+id/create_new_draw_note"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/draw_notes_button"
                    android:src="@drawable/ic_icon_pen" />

                <ImageButton
                    android:id="@+id/create_new_micro_note"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/micro_notes_button"
                    android:src="@drawable/ic_icon_micro" />

                <ImageButton
                    android:id="@+id/create_new_photo_note"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:contentDescription="@string/photo_notes_button"
                    android:src="@drawable/ic_icon_photo" />

            </TableRow>

        </TableLayout>

    </RelativeLayout>

</layout>
